# django-happy-shop

./: .gitignore  LICENSE  MANIFEST.in  README.en.md  README.md  RELEASE.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
DjangoMall/: manage.py
DjangoMall/DJMall/: asgi.py  urls.py  wsgi.py
DjangoMall/DJMall/settings/: base.py  develop.py  release.py
DjangoMall/DJMall/utils/: __init__.py  models.py  utils.py  views.py
DjangoMall/apps/dadmin/: admin.py  apps.py  dadmin.py  forms.py
DjangoMall/apps/news/: dadmin.py  urls.py  views.py
DjangoMall/apps/order/: dadmin.py  forms.py  models.py  urls.py  views.py
DjangoMall/apps/personal/: forms.py  urls.py
DjangoMall/apps/product/: apps.py  dadmin.py  inline_admin.py  urls.py
DjangoMall/apps/users/: apps.py  dadmin.py  forms.py  signals.py  urls.py
DjangoMall/config/: cache.py  conf.py
DjangoMall/db/data/: product_category_data.py
apps/order/: byadmin.py  forms.py
apps/order/models/: order_info.py
apps/order/views/: order_info.py
apps/product/views/: product.py
apps/users/views/: operate.py
deploy/: django_mall.ini
doc/: doc.md  product.json
docs/source/: conf.py
docs/source/djmall/: DJMall.rst  DJMall.utils.rst  apps.order.rst  apps.order.views.rst  apps.rst  (+8 more)
happy_shop/: admin.py  apps.py  filters.py  forms.py  signals.py  urls.py  utils.py
happy_shop/api/: api_urls.py  filters.py
happy_shop/conf/: __init__.py  default_settings.py
happy_shop/models/: __init__.py  goods.py  order.py
happy_shop/templatetags/: tpl_tags.py
happy_shop/views/: goods.py  order.py  views.py
(+131 files in other folders)
