[metadata]
name = django-happy-shop
version = 1.0.5
description = 一个简单的django商城系统.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.lotdoc.cn
author = 幸福关中
author_email = 1158920674@qq.com
license = MIT
project_urls =
    Bug Tracker = https://www.lotdoc.cn
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2  # Replace "X.Y" as appropriate
    Pillow >= 9.0.1
    python-alipay-sdk >= 3.0.4
    django-cors-headers >= 3.11.0
    django-crispy-forms >= 1.14.0
    django-filter >= 21.1
    coreapi >= 2.3.3
    djangorestframework >= 3.13.1
    drf-extensions >= 0.7.1